# MigawariDriver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
driver/migawari/resources/settings/: default.vrsettings
driver_files/src/: Device.hpp  DriverFactory.cpp  DriverFactory.hpp  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.hpp  VRWatchdogProvider.hpp
migawari/: driver.vrdrivermanifest
migawari/resources/: driver.vrresources
src/: Device.hpp  DriverFactory.cpp  DriverFactory.hpp  Hooking.cpp  Hooking.hpp  InterfaceHookInjector.cpp  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.hpp  VRWatchdogProvider.cpp
